# bods-backend

./: .black.toml  .coverage  .coveragerc  .gitignore  Makefile  README.md  VERSION  docker-compose.yml  fares-etl.yaml  kpmg-metadata.yml  message.json  model_gen.py  periodic-tasks.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  run_lambda.py  samconfig.yaml  template.yaml  timetables-etl-local.yaml  timetables-etl-standalone.yaml  timetables-etl.yaml  transmodel_servicepattern.csv
.github/: dependabot.yml  pull_request_template.md
.github/actions/create-check/: action.yaml
.github/workflows/: build.yml  checkov.yaml  cleanup-branches.yaml  codeql-analysis.yaml  deploy.yml  lint-pr.yaml  lint.yaml  pytest.yaml
config/: .env.template
docker/pgadmin/: Dockerfile
docs/: setup.md
localstack/scripts/: bootstrap_layers.py  check-timetables-etl.sh  init-aws.sh  run-timetables-etl.sh
sql/: a.avlCavlDataArchive.sql  b.fileProcessingResult.sql
sql/local/: a.createDatabase.sql  b.createEntities.sql  b.createUsers.sql
src/: consolidate_tracks.statemachine.json  fares_etl.statemachine.json  model_gen.py  timetables_etl.statemachine.json  timetables_etl.statemachine.yaml
src/backend/: antivirus_scan.py  app.py  clamav_scanner.py  create_sirivm_zip.py
src/boilerplate/: archiver.py  bods_exception.py  common.py  constants.py  enums.py  exception.py  logger.py  requirements-dev.txt  requirements.txt  s3.py  transxchange.py  utils.py  xml.py  xml_validator.py  zip.py
src/boilerplate/common_layer/: archiver.py  cfn.py  download.py  enums.py  json_logging.py  logger.py  s3.py  utils.py  utils_location.py  violations.py  xml_validator.py  zip.py
src/boilerplate/db/: avl_cavldataarchive.py  constants.py  dataset_etl_task_result.py  dataset_revision.py  file_processing_result.py  models.py  post_schema_violation.py  schema_definition.py  schema_violation.py
src/boilerplate/exceptions/: file_exceptions.py  pipeline_exceptions.py
src/boilerplate/timetables/: transxchange.py
src/boilerplate/xmlelements/: elements.py
src/periodic_tasks/: clamav_scanner.py  create_gtfsrt_zip.py  create_sirivm_tfl_zip.py  create_sirivm_zip.py  iterator.py  pt_iterator.py  timetable_post_schema_violation.py  timetable_schema_check.py  txc_file_data_extractor.py  txc_file_validator.py
src/standalone/: create_db_tables.py  requirements.txt  setup_db_role.py
src/standalone/create_tables/: requirements.txt
src/timetables_etl/: app.py  clamav_scanner.py  download_dataset.py  dqs_trigger.py  exception_handler.py  file_attributes_etl.py  file_validation.py  generate_zip_and_hash.py  initialize_pipeline.py  post_schema_check.py  pti_validation.py  requirements.txt  schema_check.py  timetable_post_schema_check.py  timetable_schema_check.py  txc_file_data_extractor.py  txc_file_validator.py
src/timetables_etl/app/: app.py  exception_handler.py  models.py  pipeline.py
src/timetables_etl/database/: model_naptan.py  model_organisation.py  model_pipelines.py  repo_common.py  repo_etl_task.py  repo_naptan.py
src/timetables_etl/dqs/: step_function_client.py
src/timetables_etl/etl/: requirements.txt
src/timetables_etl/pti/: constants.py  models.py  requirements.txt  service.py  utils.py
tests/: conftest.py  mock_db.py  test_archivers.py  test_ci.py
tests/backend/: test_app.py  test_clamav_scanner.py  test_create_gtfsrt_zipfile.py  test_create_sirivm_tfl_zipfile.py  test_create_sirivm_zipfile.py
tests/boilerplate/: test_archivers.py  test_common_db.py  test_exception.py  test_logger.py  test_s3.py  test_utils.py  test_xml_validator.py  test_zip.py
tests/boilerplate/common_layer/: test_archivers.py  test_cfn.py  test_common_db.py  test_s3.py  test_xml_validator.py  test_zip.py
tests/boilerplate/db/: test_dataset_etl_task_result.py  test_dataset_revision.py  test_file_processing_result.py  test_schema_definition.py  test_schema_violation.py
tests/boilerplate/timetables/: test_transxchange.py
tests/boilerplate/xmlelements/: test_elements.py
tests/common_lambdas/clamav_scanner/: test_verify_file.py  (+1 more)
tests/periodic_tasks/: test_clamav_scanner.py  test_create_gtfsrt_zipfile.py  test_create_sirivm_tfl_zipfile.py  test_create_sirivm_zipfile.py  test_iterator.py  test_periodic_tasks.py  test_pt_iterator.py  test_timetable_schema_check.py  test_txc_file_data_extractor.py  test_txc_file_validator.py
tests/timetables_etl/: test_app.py  test_clamav_scanner.py  test_download_dataset.py  test_dqs_trigger.py  test_exception_handler.py  test_file_attributes_etl.py  test_file_validation.py  test_generate_zip_and_hash.py  test_initialize_pipeline.py  test_post_schema_check.py  test_pti_validation.py  test_schema_check.py  test_timetable_post_schema_check.py  test_timetable_schema_check.py  test_txc_file_data_extractor.py  test_txc_file_validator.py
tests/xml/: conftest.py
tools/build_scripts/: create_requirements_files.py
tools/common/: db_tools.py  models.py  xml_tools.py
tools/dataset_revision/: cli.py
tools/db_viewer/: cli.py  config.py  data_quality.py  etl_task.py  fares.py  naptan.py  organisation.py  timetables.py  transmodel.py  utils.py
tools/download_dataset/: cli.py
tools/email/: cli.py
tools/file_attributes/: cli.py
tools/file_validation/: cli.py
tools/file_viewer/: __init__.py  cli.py  console_formatting.py
tools/initialize_pipeline/: cli.py
tools/local_etl/: cli.py  make_task_data.py  mock_task_data.py  models.py  processing.py  timing.py
tools/post_schema_check/: cli.py
tools/profiler/: cli.py
tools/pti_validation/: cli.py
tools/schema_check/: cli.py
tools/state_machine_viewer/: api_map_states.py  api_requests.py  helpers.py  models.py  step_function_viewer.py
tools/state_runner/: cli.py  models.py  s3_uploads.py  state_machines.py
tools/txc_tools/: calculation.py  cli.py  common.py  csv_output.py  models.py  parallel_processor.py  report.py  utils.py  xml_processor.py  xml_txc_processor.py  zip_tag_match_xml.py  zip_xml_size_report.py  zip_xml_tag_counter.py
tools/zip_tools/: cli.py  multi_zip_maker.py  xml_formatter.py  zip_repackage.py
(+1066 files in other folders)
