[tool.poetry]
name = "bods-backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
packages = [{ from = "src", include = "boilerplate" }]

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.3.0"
pydantic = "^2.9.2"
boto3 = "^1.35.57"

[tool.poetry.group.database.dependencies]
sqlalchemy = "^2.0.36"
geoalchemy2 = "^0.16.0"
psycopg2-binary = "^2.9.10"

[tool.poetry.group.etl.dependencies]
structlog = "^24.4.0"
pydantic-settings = "^2.6.1"
shapely = "^2.0.6"
pyproj = "^3.7.0"

[tool.poetry.group.boilerplate.dependencies]
django = "^5.1.4"
requests = "^2.32.3"
defusedxml = "^0.7.1"
pytz = "^2024.2"
pandas = "^2.2.3"

[tool.poetry.group.pti.dependencies]
isoduration = "^20.11.0"

[tool.poetry.group.antivirus.dependencies]
clamd = "^1.0.2"

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.1"
black = "^24.10.0"
pytest = "^8.3.3"
types-lxml = "^2024.11.8"
freezegun = "^1.5.1"
factory-boy = "^3.3.1"
mypy-boto3-s3 = "^1.35.76"
boto3-stubs = { extras = ["essential"], version = "^1.35.76" }
cfn-lint = "^1.20.2"
pytest-cov = "^6.0.0"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MAIN]
extension-pkg-allow-list = ["lxml", "pydantic", "pydantic_core"]
